--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,29 +9,25 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
-<body>
-  <header>
+</html>
+  <body>
+     <header>
     <h1>Welcome to TECH-BLOG-23</h1>
   </header>
-  <nav>
-    <a href="/">Home</a>
-    {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
-    {{else}}
-    <a href="/login">Login</a>
-    {{/if}}
-  </nav>
-  <main>
-    <aside>
-      <h2>Blog Posts</h2>
-    </aside>
-    <div class="gallery">
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        {{#if loggedIn}}
+        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/logout">Log Out</a></li>
+        {{else}}
+        <li><a href="/login">Log In</a></li>
+        <li><a href="/signup">Sign Up</a></li>
+        {{/if}}
+      </ul>
+    </nav>
+    <div class="content">
       {{{body}}}
     </div>
-  </main>
-  {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
-
+  </body>
 </html>
