seeds finally working

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,5 +12,5 @@
   <p>You haven't created any posts yet.</p>
 {{/if}}
 
-<a href="/dashboard/new" class="btn btn-secondary btn-md mt-2">Add New Post</a>
+{{!-- <a href="/dashboard/new" class="btn btn-secondary btn-md mt-2">Add New Post</a> --}}
 
