--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -15,7 +15,7 @@
   </form>
 </div>
 
-<script src="/js/edit-post.js"></script>
-<script src="/js/delete-post.js"></script>
+<script src="/public/js/edit-post.js"></script>
+<script src="/public/js/delete-post.js"></script>
 
 
