--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,3 +7,4 @@
   <button type="submit">Sign Up</button>
 </form>
 <p>Already have an account? <a href="/login">Log in here</a>.</p>
+<script src="/public/js/login.js"></script>
