--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -12,7 +12,7 @@
       <button type="submit" class="btn btn-secondary btn-md">Submit</button>
     </form>
 
-    <script src="/js/add-comment.js"></script>
+    <script src="/public/js/add-comment.js"></script>
   </div>
 </div>
 
