--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,3 +7,4 @@
   <button type="submit">Log In</button>
 </form>
 <p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
+<script src="/public/js/signup.js"></script>
